objects/wkdw__TransitionPlan__c.object
<CustomObject>
    <description>A transition plan that is associated to a specific employee</description>
    <fields>
        <fullName>wkdw__CompletedDate__c</fullName>
        <label>CompletedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wkdw__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkdw__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkdw__Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>Employee</referenceTo>
        <relationshipLabel>Transition Plans</relationshipLabel>
        <relationshipName>TransitionPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Do not use this field</description>
        <label>Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TransitionPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__Status__c</fullName>
        <defaultValue>&quot;Not Started&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkdw__TransitionPlanTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transition Plan Template</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>wkdw__OnboardingTemplate__c.wkdw__IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>wkdw__OnboardingTemplate__c</referenceTo>
        <relationshipLabel>Transition Plans</relationshipLabel>
        <relationshipName>TransitionPlans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkdw__WelcomeText__c</fullName>
        <description>The description that employees see at the top of their transition checklist.</description>
        <inlineHelpText>The description that employees see at the top of their transition checklist.</inlineHelpText>
        <label>Welcome Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Transition Plan</label>
    <nameField>
        <label>Transition Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transition Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>